fix: add two step "reset password" feature that sends mail and updates password
